--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -5,6 +5,8 @@ $color-background-section-dark: #27262a !default;
 $color-background-section-darkest: #000000 !default;
 
 .Section{
+	overflow: hidden;
+
 	&_background_lightest{
 		background-color: $color-background-section-lightest;
 	}
